@@ -1689,7 +1689,7 @@
 				} else {
 					$message = 'You logged out from Workspace preview mode. Click this link to <a href="%1$s">go back to the website</a>';
 				}
-				
+
 				$returnUrl = t3lib_div::sanitizeLocalUrl(t3lib_div::_GET('returnUrl'));
 				die(sprintf($message,
 					htmlspecialchars(preg_replace('/\&?ADMCMD_prev=[[:alnum:]]+/', '', $returnUrl))
@@ -3634,7 +3634,7 @@ if (version == "n3") {
         $microtime_end              = (isset($GLOBALS['TYPO3_MISC']['microtime_end'])) ? $GLOBALS['TYPO3_MISC']['microtime_end'] : NULL;
         $microtime_BE_USER_start    = (isset($GLOBALS['TYPO3_MISC']['microtime_BE_USER_start'])) ? $GLOBALS['TYPO3_MISC']['microtime_BE_USER_start'] : NULL;
         $microtime_BE_USER_end      = (isset($GLOBALS['TYPO3_MISC']['microtime_BE_USER_end'])) ? $GLOBALS['TYPO3_MISC']['microtime_BE_USER_end'] : NULL;
-        
+
         $this->scriptParseTime = $GLOBALS['TT']->getMilliseconds($microtime_end) - $GLOBALS['TT']->getMilliseconds($microtime_start)
                                 - ($GLOBALS['TT']->getMilliseconds($microtime_BE_USER_end) - $GLOBALS['TT']->getMilliseconds($microtime_BE_USER_start));
     }
@@ -4262,15 +4262,19 @@ if (version == "n3") {
 
 	/**
 	 * Logs access to deprecated TypoScript objects and properties.
-	 * Dumps message to the TypoScript message log (admin panel) and the TYPO3 deprecation log.
 	 *
-	 * @param	string		Message string
+	 * Dumps message to the TypoScript message log (admin panel) and the TYPO3 deprecation log.
+	 * Note: The second parameter was introduced in TYPO3 4.5 and is not available in older versions
+	 *
+	 * @param	string		Deprecated object or property
+	 * @param	string		Message or additional infomration
 	 * @return	void
 	 * @see t3lib_div::deprecationLog(), t3lib_timeTrack::setTSlogMessage()
 	 */
-	function logDeprecatedTyposcript($msg) {
-		$GLOBALS['TT']->setTSlogMessage($msg . ' is deprecated.', 2);
-		t3lib_div::deprecationLog('TypoScript ' . $msg);
+	function logDeprecatedTyposcript($typoScriptProperty, $explanation = '') {
+		$explanationText = (strlen($explanation) ? ' - ' . $explanation : '');
+		$GLOBALS['TT']->setTSlogMessage($typoScriptProperty . ' is deprecated.' . $explanationText, 2);
+		t3lib_div::deprecationLog('TypoScript ' . $typoScriptProperty . ' is deprecated' . $explanationText);
 	}
 
 	/**
